# try-wasm

./: .gitignore  Makefile  README.md  asconfig.json  package.json
assembly-script/: main.ts  package.json
assembly-script/assembly/: external.ts  index.ts
public/: index.html
rust/: lib.rs
rust-vs-wasm/: Cargo.toml  Makefile  package.json  tsconfig.json
rust-vs-wasm/scripts/: compute.ts  tsp-generator.ts
rust-vs-wasm/src/: lib.rs  main.rs  serde_util.rs  tsp.rs
rust-vs-wasm/src/libtsp/: Cargo.toml
rust-vs-wasm/src/libtsp/src/: tsp.rs  util.rs
rust-vs-wasm/src/libwasmutil/: Cargo.toml
rust-vs-wasm/src/libwasmutil/src/: util.rs
rust-vs-wasm/src/tsp/: Cargo.toml
rust-vs-wasm/src/tsp/src/: main.rs
rust-vs-wasm/ts/: index.ts  tsp-def.ts  tsp.ts
rust-vs-wasm/tsp/: Cargo.toml
