[package]
name = "rust-vs-wasm"
version = "0.1.0"
authors = ["Ben Lu <ayroblu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tsp"
path = "src/main.rs"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

# [lib]
# name = "libtsp"
# path = "src/tsp.rs"

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde_json = "1.0.32"
serde_derive = "1.0.80"
serde = "1.0.80"
