[package]
name = "rust-vs-wasm"
version = "0.1.0"
authors = ["Ben Lu <ayroblu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde_json = "1.0.32"
serde_derive = "1.0.80"
serde = "1.0.80"
libtsp = { path = "./src/libtsp" }

[workspace]
members = [
    "src/tsp",
    "src/libtsp",
]
