[package]
name = "libtsp"
version = "0.1.0"
authors = ["Ben Lu <ayroblu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libtsp"
path = "src/tsp.rs"

[dependencies]
#web-sys = { version = "0.3.51", features = ["console"] }
